# StarlingMonkey

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .release-please-manifest.json  404.html  ADOPTERS.html  ADOPTERS.md  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.html  Cargo.toml  LICENSE  Makefile  README.md  clang-format.ignore  clean_test.sh  componentize.sh  componentize.sh.in  index.html  justfile  print.html  release-please-config.json  searchindex.js  spin.toml  toc.html  toc.js
.github/workflows/: debugger.yml  docs.yml  main.yml  release-please.yml  vscode-extension-release.yml
builtins/: install_builtins.cpp
builtins/node/: node.cpp  node.h  process_env.cpp  process_env.h
builtins/web/: base64.cpp  base64.h  blob.cpp  blob.h  console.cpp  console.h  dom-exception.cpp  dom-exception.h  file.cpp  file.h  form-data.cpp  form-data.h  global_self.cpp  global_self.h  performance.cpp  performance.h  queue-microtask.cpp  queue-microtask.h  structured-clone.cpp  structured-clone.h  timers.cpp  timers.h  url.cpp  url.h  worker-location.cpp  worker-location.h
builtins/web/abort/: abort-controller.cpp  abort-controller.h  abort-signal.cpp  abort-signal.h  weak-index-set.h
builtins/web/crypto/: crypto-algorithm.cpp  crypto-algorithm.h  crypto-errors.h  crypto-key-ec-components.h  crypto-key.cpp  (+12 more)
cmake/: CPM.cmake  add_as_subproject.cmake  add_builtin.cmake  binaryen.cmake  build-crates.cmake  builtins.cmake  cbindgen.cmake  compile-flags.cmake  fmt.cmake  host_api.cmake  init-corrosion.cmake  lint.cmake  manage-git-source.cmake  openssl.cmake  spidermonkey.cmake  toolchain.cmake  wasi-sdk.cmake  wasm-tools.cmake  wasmtime.cmake  weval.cmake  wizer.cmake
compute-at-edge/host_interface/: host_api.h  host_call.cpp
cpp/: winter-rt.cpp
cpp/builtins/: builtin.cpp  builtin.h  error-numbers.msg
cpp/core/: allocator.cpp  allocator.h  encode.cpp  encode.h  engine.cpp  engine.h  event_loop.cpp
cpp/host_interface/: host_api.cpp  host_api.h
crates/rust-encoding/: Cargo.toml
crates/rust-hooks/: Cargo.toml
crates/rust-multipart/: Cargo.toml  cbindgen.toml  rust-multipart-ffi.h
crates/rust-multipart/fuzz/: Cargo.toml
crates/rust-multipart/fuzz/corpus/fuzz_multipart/: multi.seed  simple.seed
crates/rust-multipart/fuzz/fuzz_targets/: fuzz_multipart.rs
crates/rust-multipart/src/: capi.rs  error.rs  lib.rs  parser.rs  trivia.rs
crates/rust-multipart/tests/: integration.rs
crates/rust-url/: Cargo.toml  rust-url.h
crates/rust-uuid/: Cargo.toml  cbindgen.toml  rust-uuid-ffi.h  rust-uuid.h
debugger/vscode-dap-extension/: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
developer/: builtins-cpp.html  builtins-rust.html  debugging.html  just.html  spidermonkey.html
disabled/: fetch-event.h
docs/: book.toml
docs/src/: SUMMARY.md
getting-started/: building.html  testing.html
host-apis/wasi-0.2.0/: handles.h  host_api.cmake  host_api.cpp  http-body-append.cpp
host-apis/wasi-0.2.0-rc-2023-10-18/: host_api.cpp  host_call.cpp
host-apis/wasi-0.2.0-rc-2023-12-05/: host_api.cpp
host-apis/wasi-0.2.10/: host_api.cmake
host-apis/wasi-0.2.2/: host_api.cmake  host_api.cpp
host-apis/wasi-0.2.3/: host_api.cmake  sockets.cpp
host-apis/wasi-0.2.x-pre/: host_api.cmake  http-body-append.cpp
include/: builtin.h  config-parser.h  error-numbers.msg  errors.h  extension-api.h  host_api.h  libjs.h
js-component/: Cargo.toml  spin.toml
js-component/src/: lib.rs
js-shared/: js-shared.cpp
mk/: commands.mk
resources/: community.html
runtime/: allocator.cpp  allocator.h  builtin.cpp  debugger.cpp  debugger.h  decode.cpp  decode.h  encode.cpp  encode.h  engine.cpp  engine.h  event_loop.cpp  event_loop.h  js.cpp  libjs.cpp  script_loader.cpp  script_loader.h  sequence.hpp  winter-rt.cpp
runtime/cpp/: builtin.cpp  decode.cpp  encode.h  engine.cpp  event_loop.cpp  event_loop.h  js.cpp  script_loader.cpp
runtime/crates/: Cargo.toml
runtime/crates/generate-bindings/: Cargo.toml  build.rs
runtime/crates/generate-bindings/src/: generate_wrappers.sh
runtime/crates/jsapi-rs/: Cargo.toml
runtime/crates/jsapi-rs/cpp/: jsapi.hpp  jsglue.cpp
runtime/crates/jsapi-rs/src/: jsimpls.rs  jsval.rs  lib.rs
runtime/crates/jsapi-rs/src/jsapi/: bindings_debug.rs  bindings_release.rs  mod.rs
runtime/crates/spidermonkey-rs/: Cargo.toml
runtime/crates/spidermonkey-rs/src/: consts.rs  conversions.rs  error.rs  lib.rs  typedarray.rs
runtime/crates/spidermonkey-rs/src/gc/: collections.rs  custom.rs  macros.rs  mod.rs  root.rs  trace.rs
runtime/crates/spidermonkey-rs/src/rust/: mod.rs
runtime/crates/spidermonkey-rs/src/rust/jsapi_wrapped/: jsapi_wrappers.rs
runtime/crates/starlingmonkey-rs/: Cargo.toml
runtime/crates/starlingmonkey-rs/src/: bindings.rs  lib.rs
runtime/crates/staticlib-template/: Cargo.toml.in  rust-staticlib.rs.in
runtime/crates/test-builtin/: Cargo.toml
runtime/crates/test-builtin/src/: lib.rs
scripts/: build-spidermonkey.sh  clang-format.sh  componentize.sh.in  cxx-wrapper.in
src/builtins/: install_builtins.cpp
src/include/: extension-api.h  host_api.h
src/runtime/: allocator.cpp  builtin.cpp  decode.h  encode.cpp  encode.h  engine.cpp  js.cpp
tests/: assert.js  nested-smoke-dependency.js  smoke.js  test.sh  tests.cmake
tests/integration/: assert.js  handlers.js  test-server.js
tests/wpt-harness/: build-wpt-runtime.sh  post-harness.js  pre-harness.js  run-wpt.mjs  tests.json  wpt.cmake  wpt_builtins.cpp
wasi-0.2.0-rc-2023-10-18/: host_api.cpp
wasi-0.2.0-rc-2023-10-18/preview1-adapter-debug/: wasi_snapshot_preview1.wasm
wasi-preview2/: host_api.cpp  host_api.d  host_call.cpp  host_call.d  wasi_snapshot_preview1.wasm
wasi-preview2/bindings/: bindings.c  bindings.d  bindings.h
wasi-preview2/preview1-adapter-debug/: wasi_snapshot_preview1.wasm
wasi-preview2/preview1-adapter-release/: wasi_snapshot_preview1.wasm
wasi-preview2/wit/: main.wit
wit/: main.wit
wizer-app/: wizer_app.cpp
(+362 files in other folders)
