[package]
name = "multipart-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.multipart]
path = ".."

[[bin]]
name = "fuzz_multipart"
path = "fuzz_targets/fuzz_multipart.rs"
test = false
doc = false
bench = false
