[package]
name = "starlingmonkey-rs"
description = "Rust bindings to the StarlingMonkey JavaScript runtime."
authors.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]

[features]
debugmozjs = ['spidermonkey-rs/debugmozjs']
jitspew = ['spidermonkey-rs/jitspew']
profilemozjs = ['spidermonkey-rs/profilemozjs']
streams = ['spidermonkey-rs/streams']

[dependencies]
spidermonkey-rs.workspace = true
wit-bindgen = "0.28.0"
