[package]
name = "starlingmonkey-rs"
description = "Rust bindings for the StarlingMonkey JavaScript runtime."
authors.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]

[dependencies]
spidermonkey-rs.workspace = true
wit-bindgen = "0.29.0"
