[package]
name = "test-builtin"
authors.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]

[dependencies]
starlingmonkey-rs.workspace = true
spidermonkey-rs.workspace = true

[features]
debugmozjs = ['spidermonkey-rs/debugmozjs']
jitspew = ['spidermonkey-rs/jitspew']
profilemozjs = ['spidermonkey-rs/profilemozjs']
streams = ['spidermonkey-rs/streams']
